--- a/BC.ClientApps/Properties/launchSettings.json
+++ b/BC.ClientApps/Properties/launchSettings.json
@@ -15,12 +15,31 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BC.ClientApps": {
+    "BC.ClientApps.Client": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5011;http://localhost:5010",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ClientApp": "client"
+      }
+    },
+    "BC.ClientApps.Master": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5021;http://localhost:5020",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ClientApp": "master"
+      }
+    },
+    "BC.ClientApps.Saloon": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5031;http://localhost:5030",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ClientApp": "saloon"
       }
     }
   }
