--- a/BC.ClientApps/ng-workspace/angular.json
+++ b/BC.ClientApps/ng-workspace/angular.json
@@ -25,10 +25,45 @@
             "aot": true,
             "assets": [
               "projects/client-app/src/favicon.ico",
-              "projects/client-app/src/assets"
+              "projects/client-app/src/assets",
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
+              }
             ],
             "styles": [
-              "projects/client-app/src/styles.scss"
+              "projects/client-app/src/styles.scss",
+              {
+                "input": "node_modules/@ionic/angular/css/normalize.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/structure.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/typography.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/core.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/padding.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/float-elements.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-alignment.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-transformation.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/flex-utils.css"
+              },
+              {
+                "input": "projects/client-app/src/theme/variables.css"
+              }
             ],
             "scripts": []
           },
@@ -119,6 +154,30 @@
           "configurations": {
             "production": {
               "devServerTarget": "client-app:serve:production"
+            }
+          }
+        },
+        "ionic-cordova-serve": {
+          "builder": "@ionic/angular-toolkit:cordova-serve",
+          "options": {
+            "cordovaBuildTarget": "client-app:ionic-cordova-build",
+            "devServerTarget": "client-app:serve"
+          },
+          "configurations": {
+            "production": {
+              "cordovaBuildTarget": "client-app:ionic-cordova-build:production",
+              "devServerTarget": "client-app:serve:production"
+            }
+          }
+        },
+        "ionic-cordova-build": {
+          "builder": "@ionic/angular-toolkit:cordova-build",
+          "options": {
+            "browserTarget": "client-app:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "client-app:build:production"
             }
           }
         }
@@ -405,6 +464,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "client-app"
 }
