--- a/BC.ClientApps/ng-workspace/package.json
+++ b/BC.ClientApps/ng-workspace/package.json
@@ -47,6 +47,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5",
-    "@ionic/angular-toolkit": "latest"
+    "@ionic/angular-toolkit": "^2.3.0"
   }
 }
