add authentification service

--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -1,10 +1,37 @@
 {
+  "ConnectionStrings": {
+    "AuthentificationContext": "Server=.;Database=BCAuthentification;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RocketSMSCredentials": {
+    "Username": "791105250",
+    "PasswordHash": "b9f2715641f45b836970bf6ded9d6c99"
+  },
+  "JWTokenOptions": {
+    "Issuer": "defaultServer",
+    "Audience": "defaultClient",
+    "SecurityKey": "defaultSecurityKey"
+  },
+  "VKCredentials": {
+    "ClientId": "7525094",
+    "ClientSecret": "eTv1AiYcstOVys5axoMx",
+    "RedirectUrl": "http://localhost:6069/UI/MainPage"
+  },
+  "InstagramCredentials": {
+    "ClientId": "1563532247147538",
+    "ClientSecret": "d0e3165d52fddda634dbde27830fcd59",
+    "RedirectUrl": "https://localhost:44396/UI/MainPage"
+  },
+  "GoogleCredentials": {
+    "ClientId": "4306410829-7gnaa751oumkn67o1jfbep4lpqlabnbe.apps.googleusercontent.com",
+    "ClientSecret": "jduXjXmrc86Nr8Ka2Zh44qEs",
+    "RedirectUrl": "https://localhost:44396/UI/MainPage"
   },
   "AllowedHosts": "*"
 }
