--- a/BC.Client/ClientApp/tsconfig.json
+++ b/BC.Client/ClientApp/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "esnext",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
-    "declaration": true,
+    "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -17,14 +17,5 @@
       "es2017",
       "dom"
     ]
-  },
-  "files": [],
-  "references": [
-    {
-      "path": "../../BC.Common/workspace/projects/bc-common/tsconfig.lib.json"
-    },
-    {
-      "path": "../../BC.Common/workspace/projects/bc-common/tsconfig.spec.json"
-    }
-  ]
+  }
 }
