--- a/BC.Client/ClientApp/package.json
+++ b/BC.Client/ClientApp/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser-dynamic": "^10.0.6",
     "@angular/platform-server": "^10.0.6",
     "@angular/router": "^10.0.6",
+    "@ionic/cli": "^6.11.0",
+    "@ionic/angular": "^5.3.1",
+    "@capacitor/android": "^2.4.0",
+    "@capacitor/cli": "^2.4.0",
+    "@capacitor/core": "^2.4.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.0",
