--- a/BC.Client/ClientApp/package.json
+++ b/BC.Client/ClientApp/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-server": "^10.0.6",
     "@angular/router": "^10.0.6",
     "@ionic/cli": "^6.11.0",
+    "@ionic-native/core": "^5.27.0",
+    "@ionic-native/status-bar": "^5.27.0",
+    "@ionic-native/splash-screen": "^5.27.0",
     "@ionic/angular": "^5.3.1",
     "@capacitor/android": "^2.4.0",
     "@capacitor/cli": "^2.4.0",
