--- a/BC.Client/ClientApp/package.json
+++ b/BC.Client/ClientApp/package.json
@@ -21,14 +21,14 @@
     "@angular/platform-browser-dynamic": "^10.0.6",
     "@angular/platform-server": "^10.0.6",
     "@angular/router": "^10.0.6",
-    "@ionic/cli": "^6.11.0",
-    "@ionic-native/core": "^5.27.0",
-    "@ionic-native/status-bar": "^5.27.0",
-    "@ionic-native/splash-screen": "^5.27.0",
-    "@ionic/angular": "^5.3.1",
     "@capacitor/android": "^2.4.0",
     "@capacitor/cli": "^2.4.0",
     "@capacitor/core": "^2.4.0",
+    "@ionic-native/core": "^5.27.0",
+    "@ionic-native/splash-screen": "^5.27.0",
+    "@ionic-native/status-bar": "^5.27.0",
+    "@ionic/angular": "^5.3.1",
+    "@ionic/cli": "^6.11.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.0",
@@ -37,6 +37,7 @@
     "oidc-client": "^1.10.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.0",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
