--- a/BC.Common/Properties/launchSettings.json
+++ b/BC.Common/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:6506",
-      "sslPort": 44308
+      "applicationUrl": "http://localhost:54750",
+      "sslPort": 44382
     }
   },
   "profiles": {
@@ -15,10 +15,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BC.Master": {
+    "BC.Common": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5021;http://localhost:5020",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
