--- a/BC.API/BC.API.csproj
+++ b/BC.API/BC.API.csproj
@@ -2,7 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <UserSecretsId>c2909c8f-e054-462f-aa53-513d74ccc0c5</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
+    </ItemGroup>
 
 
 </Project>
