--- a/BC.Client/ClientApp/package.json
+++ b/BC.Client/ClientApp/package.json
@@ -32,6 +32,7 @@
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.0",
+    "cordova": "^10.0.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "oidc-client": "^1.10.1",
