--- a/BC.Client/Client/package.json
+++ b/BC.Client/Client/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "nswag": "nswag run ./src/app/api-clients/nswag/nswag.json"
   },
   "private": true,
   "dependencies": {
@@ -48,6 +49,7 @@
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
+    "nswag": "^13.7.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
