--- a/BC.Client/Client/package.json
+++ b/BC.Client/Client/package.json
@@ -15,7 +15,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "nswag-master-list": "nswag run ./src/app/api-client/master-list/nswag.json",
-    "nswag-authintication": "nswag run ./src/app/api-client/authentication/nswag.json"
+    "nswag-authentication": "nswag run ./src/app/api-client/authentication/nswag.json"
   },
   "private": true,
   "dependencies": {
