--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -22,17 +22,17 @@
   "VKCredentials": {
     "ClientId": "7525094",
     "ClientSecret": "eTv1AiYcstOVys5axoMx",
-    "RedirectUrl": "http://localhost:6069/UI/MainPage"
+    "RedirectUrl": "https://localhost:5011/authentication"
   },
   "InstagramCredentials": {
     "ClientId": "1563532247147538",
     "ClientSecret": "d0e3165d52fddda634dbde27830fcd59",
-    "RedirectUrl": "https://localhost:44396/UI/MainPage"
+    "RedirectUrl": "https://localhost:5011/authentication"
   },
   "GoogleCredentials": {
     "ClientId": "4306410829-7gnaa751oumkn67o1jfbep4lpqlabnbe.apps.googleusercontent.com",
     "ClientSecret": "jduXjXmrc86Nr8Ka2Zh44qEs",
-    "RedirectUrl": "https://localhost:44396/UI/MainPage"
+    "RedirectUrl": "https://localhost:5011/authentication"
   },
   "AllowedHosts": "*"
 }
