universal ports on front

--- a/BC.Client/Properties/launchSettings.json
+++ b/BC.Client/Properties/launchSettings.json
@@ -22,6 +22,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "BC.Client.Timur": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:6011;http://localhost:6010",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "BASE_URL": "https://localhost:6011"
+      }
     }
   }
 }
