--- a/BC.Client/Client/angular.json
+++ b/BC.Client/Client/angular.json
@@ -92,6 +92,102 @@
             },
             "ci": {
               "progress": false
+            },
+            "timur": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.timur.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            },
+            "roman": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.roman.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            },
+            "wolk": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.wolk.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            },
+            "sanya": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.sanya.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           }
         },
@@ -109,6 +205,18 @@
             },
             "ci": {
               "progress": false
+            },
+            "timur": {
+              "browserTarget": "app:build:timur"
+            },
+            "roman": {
+              "browserTarget": "app:build:roman"
+            },
+            "wolk": {
+              "browserTarget": "app:build:wolk"
+            },
+            "sanya": {
+              "browserTarget": "app:build:sanya"
             }
           }
         },
@@ -173,6 +281,18 @@
             },
             "ci": {
               "devServerTarget": "app:serve:ci"
+            },
+            "timur": {
+              "devServerTarget": "app:serve:timur"
+            },
+            "roman": {
+              "devServerTarget": "app:serve:roman"
+            },
+            "wolk": {
+              "devServerTarget": "app:serve:wolk"
+            },
+            "sanya": {
+              "devServerTarget": "app:serve:sanya"
             }
           }
         },
