--- a/BC.Client/Client/package.json
+++ b/BC.Client/Client/package.json
@@ -7,9 +7,17 @@
     "ng": "ng",
     "start-staging": "ng run app:serve:staging",
     "start-prod": "ng run app:serve:production",
+    "start-timur": "ng run app:serve:timur",
+    "start-roman": "ng run app:serve:roman",
+    "start-wolk": "ng run app:serve:wolk",
+    "start-sanya": "ng run app:serve:sanya",
     "start": "ng serve",
     "build-staging": "ng run app:build:staging",
     "build-prod": "ng run app:build:production",
+    "build-timur": "ng run app:build:timur",
+    "build-ronam": "ng run app:build:roman",
+    "build-wolk": "ng run app:build:wolk",
+    "build-sanya": "ng run app:build:sanya",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
