--- a/BC.Client/Properties/launchSettings.json
+++ b/BC.Client/Properties/launchSettings.json
@@ -26,10 +26,33 @@
     "BC.Client.Timur": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:6011;http://localhost:6010",
+      "applicationUrl": "https://localhost:5211;http://localhost:5210",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "BASE_URL": "https://localhost:6011"
+        "ASPNETCORE_ENVIRONMENT": "Timur"
+      }
+    },
+    "BC.Client.Roman": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5213;http://localhost:5212",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Roman"
+      }
+    },
+    "BC.Client.Wolk": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5215;http://localhost:5214",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Wolk"
+      }
+    },
+    "BC.Client.Sanya": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5217;http://localhost:5216",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Sanya"
       }
     }
   }
