--- a/BC.API/Properties/launchSettings.json
+++ b/BC.API/Properties/launchSettings.json
@@ -31,7 +31,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Timur",
+        "REDIRECT_URL": "https://localhost:5211"
       },
       "applicationUrl": "https://localhost:5201;http://localhost:5200"
     },
@@ -40,7 +41,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Roman",
+        "REDIRECT_URL": "https://localhost:5213"
       },
       "applicationUrl": "https://localhost:5203;http://localhost:5202"
     },
@@ -49,7 +51,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Wolk",
+        "REDIRECT_URL": "https://localhost:5215"
       },
       "applicationUrl": "https://localhost:5205;http://localhost:5204"
     },
@@ -58,7 +61,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Sanya",
+        "REDIRECT_URL": "https://localhost:5217"
       },
       "applicationUrl": "https://localhost:5207;http://localhost:5206"
     }
