--- a/BC.API/Properties/launchSettings.json
+++ b/BC.API/Properties/launchSettings.json
@@ -31,8 +31,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Timur",
-        "REDIRECT_URL": "https://localhost:5211"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5201;http://localhost:5200"
     },
@@ -41,8 +40,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Roman",
-        "REDIRECT_URL": "https://localhost:5213"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5203;http://localhost:5202"
     },
@@ -51,8 +49,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Wolk",
-        "REDIRECT_URL": "https://localhost:5215"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5205;http://localhost:5204"
     },
@@ -61,8 +58,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Sanya",
-        "REDIRECT_URL": "https://localhost:5217"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5207;http://localhost:5206"
     }
