--- a/BC.Common/BC.Common.csproj
+++ b/BC.Common/BC.Common.csproj
@@ -5,7 +5,7 @@
         <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
         <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
         <IsPackable>false</IsPackable>
-        <SpaRoot>ClientApp\</SpaRoot>
+        <SpaRoot>worksapce\projects\bc-common</SpaRoot>
         <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
 
         <!-- Set this to true if you enable server-side prerendering -->
@@ -24,16 +24,16 @@
     </ItemGroup>
 
     <ItemGroup>
-      <_ContentIncludedByDefault Remove="ClientApp\angular.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\e2e\tsconfig.e2e.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\package-lock.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\package.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\src\tsconfig.app.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\src\tsconfig.server.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\src\tsconfig.spec.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\src\tslint.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\tsconfig.json" />
-      <_ContentIncludedByDefault Remove="ClientApp\tslint.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\angular.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\e2e\tsconfig.e2e.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\package-lock.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\package.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\src\tsconfig.app.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\src\tsconfig.server.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\src\tsconfig.spec.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\src\tslint.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\tsconfig.json" />
+      <_ContentIncludedByDefault Remove="worksapce\projects\bc-common\tslint.json" />
     </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
