--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 ﻿version: '3'
 services:
-  bc-api:
-    build:
-      context: .
-      dockerfile: "BC.API/Dockerfile"
-    ports:
-    - "5001:80"
+#  bc-api:
+#    build:
+#      context: .
+#      dockerfile: "BC.API/Dockerfile"
+#    ports:
+#    - "5001:80"
   rabbitmq:
     image: "rabbitmq:3-management"
     ports:
