--- a/BC.Client/Client/package.json
+++ b/BC.Client/Client/package.json
@@ -27,6 +27,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^10.1.2",
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/forms": "~9.1.6",
