add sql server to docker-compose

--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AuthentificationContext": "Server=.;Database=BCAuthentification;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AuthenticationContext": "Server=.;Database=BCAuthentication;Trusted_Connection=True;MultipleActiveResultSets=true",
     "MasterContext": "Server=.;Database=BCMasters;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
