--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "AuthenticationContext": "Server=.;Database=BCAuthentication;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MasterContext": "Server=.;Database=BCMasters;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthenticationContext": "Server=.;Database=BC;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MasterContext": "Server=.;Database=BC;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "BalanceContext": "Server=.;Database=BC;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -30,6 +31,12 @@
   "GoogleCredentials": {
     "ClientId": "4306410829-7gnaa751oumkn67o1jfbep4lpqlabnbe.apps.googleusercontent.com",
     "ClientSecret": "jduXjXmrc86Nr8Ka2Zh44qEs"
+  },
+  "RabbitMQEventBus": {
+    "Host": "localhost",
+    "UserName": "guest",
+    "Password": "guest",
+    "Exchange": "beauty-circle-exchange"
   },
   "AllowedHosts": "*"
 }
