add migrations to MastersContext

--- a/BC.API/BC.API.csproj
+++ b/BC.API/BC.API.csproj
@@ -74,6 +74,7 @@
     <ItemGroup>
       <Folder Include="Services\BookingService\Controllers" />
       <Folder Include="Services\BookingService\Handlers" />
+      <Folder Include="Services\MastersListService\Data\Migrations" />
       <Folder Include="Services\NotificationsService" />
     </ItemGroup>
 
