--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       SA_PASSWORD: "Password123"
       ACCEPT_EULA: "Y"
     volumes:
-      - "./BC.Data:/var/opt/mssql/data"
+      - "./mssql/data:/var/opt/mssql/data"
     ports:
       - "5008:1433"
   bc-client:
