--- a/BC.API/Dockerfile
+++ b/BC.API/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS base
 WORKDIR /app
 EXPOSE 80
 
@@ -16,4 +16,6 @@ RUN dotnet publish "BC.API.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+RUN dotnet tool install --global dotnet-ef
+RUN dotnet ef database update --context AuthenticationContext
 ENTRYPOINT ["dotnet", "BC.API.dll"]
