Fix swagger and ports. Update masters schema

--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "AuthenticationContext": "Server=.;Database=BC;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MasterContext": "Server=.;Database=BC;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "BalanceContext": "Server=.;Database=BC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthenticationContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
+    "MasterContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
+    "BalanceContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;"
   },
   "Logging": {
     "LogLevel": {
