add migrations to BookingContext

--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "AuthenticationContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
     "MasterContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
+    "BookingContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
     "BalanceContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;"
   },
   "Logging": {
