--- a/BC.API/BC.API.csproj
+++ b/BC.API/BC.API.csproj
@@ -95,6 +95,8 @@
     <ItemGroup>
       <Folder Include="Services\AuthenticationService\Data\Migrations" />
       <Folder Include="Services\BookingService\Handlers" />
+      <Folder Include="Services\ImagesProcessorService\Controllers" />
+      <Folder Include="Services\ImagesProcessorService\Handlers" />
       <Folder Include="Services\MastersListService\Data\Migrations" />
       <Folder Include="Services\MastersListService\ServiceClients" />
       <Folder Include="Services\NotificationsService" />
