--- a/BC.Client/Client/package.json
+++ b/BC.Client/Client/package.json
@@ -11,6 +11,8 @@
     "start-roman": "ng run app:serve:roman",
     "start-wolk": "ng run app:serve:wolk",
     "start-sanya": "ng run app:serve:sanya",
+    "start-local-01": "ng run app:serve:local-01",
+    "start-local-02": "ng run app:serve:local-02",
     "start": "ng serve",
     "build-staging": "ng run app:build:staging",
     "build-prod": "ng run app:build:production",
