--- a/BC.Client/Properties/launchSettings.json
+++ b/BC.Client/Properties/launchSettings.json
@@ -8,51 +8,20 @@
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "BC.Client": {
+    "BC.Client.Local-01": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5011;http://localhost:5010",
+      "applicationUrl": "https://localhost:5262;http://localhost:5263",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local-01"
       }
     },
-    "BC.Client.Timur": {
+    "BC.Client.Local-02": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5211;http://localhost:5210",
+      "applicationUrl": "https://localhost:5264;http://localhost:5265",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Timur"
-      }
-    },
-    "BC.Client.Roman": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5213;http://localhost:5212",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Roman"
-      }
-    },
-    "BC.Client.Wolk": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5215;http://localhost:5214",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Wolk"
-      }
-    },
-    "BC.Client.Sanya": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5217;http://localhost:5216",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Sanya"
+        "ASPNETCORE_ENVIRONMENT": "Local-02"
       }
     }
   }
