--- a/BC.Common/workspace/projects/bc-common/package.json
+++ b/BC.Common/workspace/projects/bc-common/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.0.6",
-    "@angular/core": "^10.0.6"
+    "@angular/core": "^10.0.6",
+    "@ionic/angular": "^5.3.5"
   },
   "dependencies": {
     "tslib": "^2.0.0"
