--- a/BC.API/appsettings.json
+++ b/BC.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "AuthenticationContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
-    "MasterContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
+    "MastersContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
     "BookingContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;",
     "BalanceContext": "Server=.,5008;Database=BC;User Id=sa;Password=Password123;"
   },
