--- a/BC.API/BC.API.csproj
+++ b/BC.API/BC.API.csproj
@@ -91,6 +91,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Data" />
       <Folder Include="Services\AuthenticationService\Data\Migrations" />
       <Folder Include="Services\BookingService\Handlers" />
       <Folder Include="Services\ImagesProcessorService\Controllers" />
