--- a/BC.API/appsettings.Local-01.json
+++ b/BC.API/appsettings.Local-01.json
@@ -17,5 +17,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Services": {
+    "MastersList": {
+      "FilesServiceUrl": "http://localhost:5210/api/files"
+    }
   }
 }
