--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,19 +16,22 @@ services:
       - ConnectionStrings__AuthenticationContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
       - ConnectionStrings__MasterContext=Server=sql-server,1433;Initial Catalog=BC;User=sa;Password=Password123
       - ASPNETCORE_URLS=http://+:80
+    volumes:
+      - "./volumes/bc-api/Data:/app/Data"
   sql-server:
     image: "mcr.microsoft.com/mssql/server"
     environment:
       SA_PASSWORD: "Password123"
       ACCEPT_EULA: "Y"
     volumes:
-      - "./mssql/data:/var/opt/mssql/data"
+      - "./volumes/sql-server/data:/var/opt/mssql/data"
   rabbitmq:
     image: "rabbitmq:3-management"
   bc-client:
     build:
       context: .
       dockerfile: "BC.Client/Dockerfile"
+
   #  master:
   #    build:
   #      context: .
